# video-report-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: asr-benchmark-20260612.md  bundle-schema.md  configuration.md  current-status.md  development-rules.md  environment-cleanup.md  github-publish.md  install.md  platform-support.md  project-plan.md  provider-research.md  release-checklist.md  report-output-contract.md  report-visual-style.md  troubleshooting.md  whisper-cuda-build-20260614.md
docs/adr/: 0001-bundle-engine-and-video-report-skill.md  0002-phase-1-provider-scope.md  0003-visual-recall-is-core-evidence.md  0004-youtube-visual-recall-downloads-1080p-working-video.md  0005-candidate-screenshots-are-uncapped-by-default.md  0005-plan-guided-screenshot-candidates.md  0006-xiaohongshu-lightweight-provider-first.md
plugins/video-report-agent/: PLUGIN_README.md
plugins/video-report-agent-local/: LOCAL_PLUGIN_README.md
scripts/: asr_benchmark.py  bootstrap-macos.sh  bootstrap.ps1  export-youtube-cookies-cdp.mjs  install-local-plugin.ps1  install-plugin-macos.sh  install-plugin.ps1  install-whisper-cpp-macos.sh  install-whisper-cpp.ps1  refresh-bilibili-cookies.ps1  refresh-cookies-macos.sh  refresh-xiaohongshu-cookies.ps1  refresh-youtube-cookies.ps1  start-xiaohongshu-cdp-chrome.ps1
skills/video-bundle-prep/: SKILL.md
skills/video-report/: SKILL.md
tests/: test_bilibili_provider.py  test_bundle_readiness.py  test_bundle_writer.py  test_doctor.py  test_evidence_selection.py  test_local_video_provider.py  test_platform_detection.py  test_report_input.py  test_report_renderer.py  test_tool_paths.py  test_transcript_compare.py  test_transcription.py  test_visual_recall.py  test_visual_update.py  test_xiaohongshu_provider.py  test_xiaohongshu_signer.py  test_youtube_normalization.py
(+47 files in other folders)
