[project]
name = "video-bundle-agent"
version = "0.1.0"
description = "Create Codex-readable bundles from video sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bilibili-api-python>=17.4.1",
  "curl-cffi>=0.15.0",
  "httpx>=0.28.1",
  "lxml>=6.1.1",
  "playwright>=1.60.0",
  "pydantic>=2.7",
  "requests>=2.34.2",
  "typer>=0.12",
  "xhs>=0.2.13",
]

[project.scripts]
video-bundle-agent = "video_bundle_agent.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_bundle_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest-tmp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
